--- a/examples/inner_html/Cargo.toml
+++ b/examples/inner_html/Cargo.toml
@@ -8,5 +8,14 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-web-sys = { version = "0.3", features = ["console", "Document", "Element", "Node", "Window"] }
-yew = { path = "../../yew", features = ["web_sys"] }
+yew = { path = "../../yew" }
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+  "console",
+  "Document",
+  "Element",
+  "Node",
+  "Window",
+]
