--- a/examples/mount_point/Cargo.toml
+++ b/examples/mount_point/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
-yew = { path = "../../yew", features = ["web_sys"] }
+yew = { path = "../../yew" }
 
 [dependencies.web-sys]
 version = "0.3"
