--- a/examples/multi_thread/Cargo.toml
+++ b/examples/multi_thread/Cargo.toml
@@ -20,4 +20,4 @@ log = "0.4"
 wasm-logger = "0.2"
 serde = "1.0"
 serde_derive = "1.0"
-yew = { path = "../../yew", features = ["agent", "services", "web_sys"]}
+yew = { path = "../../yew" }
