--- a/examples/webgl/Cargo.toml
+++ b/examples/webgl/Cargo.toml
@@ -9,9 +9,16 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 js-sys = "0.3"
-yew = { path = "../../yew", features = ["web_sys"] }
+yew = { path = "../../yew" }
 wasm-bindgen = "0.2"
-web-sys = {version = "0.3", features = [
-  'HtmlCanvasElement', 'WebGlBuffer', 'WebGlProgram', 'WebGlRenderingContext',
-  'WebGlShader', 'WebGlUniformLocation',
-]}
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+  'HtmlCanvasElement',
+  'WebGlBuffer',
+  'WebGlProgram',
+  'WebGlRenderingContext',
+  'WebGlShader',
+  'WebGlUniformLocation',
+]
