--- a/yew-stdweb/Cargo.toml
+++ b/yew-stdweb/Cargo.toml
@@ -18,67 +18,20 @@ description = "A framework for making client-side single-page apps"
 [badges]
 travis-ci = { repository = "yewstack/yew" }
 
-[dependencies]
-anyhow = "1"
-anymap = "0.12"
-bincode = { version = "~1.2.1", optional = true }
-cfg-if = "0.1"
-cfg-match = "0.2"
-console_error_panic_hook = { version = "0.1", optional = true }
-futures = { version = "0.3", optional = true }
-gloo = { version = "0.2.1", optional = true }
-http = "0.2"
-indexmap = "1.0.2"
-js-sys = { version = "0.3", optional = true }
-log = "0.4"
-proc-macro-hack = "0.5"
-proc-macro-nested = "0.1"
-rmp-serde = { version = "0.14.0", optional = true }
-serde = { version = "1.0", features = ["derive"] }
-serde_cbor = { version = "0.11.1", optional = true }
-serde_json = "1.0"
-serde_yaml = { version = "0.8.3", optional = true }
-slab = "0.4"
-stdweb = { version = "0.4.20", optional = true }
-thiserror = "1"
-toml = { version = "0.5", optional = true }
-wasm-bindgen = { version = "0.2.60", optional = true }
-wasm-bindgen-futures = { version = "0.4", optional = true }
-yew-macro = { version = "0.14.1", path = "../yew-macro" }
-
-# Changes here must be reflected in `build.rs`
-[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
-wasm-bindgen = "0.2.60"
-
-# Changes here must be reflected in `build.rs`
-[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dev-dependencies]
-wasm-bindgen-test = "0.3.4"
-base64 = "0.12.0"
-ssri = "5.0.0"
-
-[target.'cfg(target_os = "emscripten")'.dependencies]
-ryu = "1.0.2" # 1.0.1 breaks emscripten
-
-[dev-dependencies]
-serde_derive = "1"
-trybuild = "1.0"
-rustversion = "1.0"
-rmp-serde = "0.14.0"
-bincode = "~1.2.1"
+[dependencies.yew]
+path = "../yew"
+default-features = false
+features = ["agent", "services", "std_web"]
 
 [features]
-default = ["services", "agent", "std_web"]
-std_web = ["stdweb"]
-doc_test = []
-wasm_test = []
-services = []
-agent = ["bincode"]
-yaml = ["serde_yaml"]
-msgpack = ["rmp-serde"]
-cbor = ["serde_cbor"]
-
-[package.metadata.docs.rs]
-features = ["yaml", "cbor", "toml", "msgpack", "doc_test"]
+bincode = ["yew/bincode"]
+cbor = ["yew/cbor"]
+doc_test = ["yew/doc_test"]
+msgpack = ["yew/msgpack"]
+services = ["yew/services"]
+toml = ["yew/toml"]
+wasm_test = ["yew/wasm_test"]
+yaml = ["yew/yaml"]
 
 [workspace]
 members = [
