--- a/yew-stdweb/examples/file_upload/Cargo.toml
+++ b/yew-stdweb/examples/file_upload/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-yew-stdweb = { path = "../.." }
+yew = { path = "../..", package = "yew-stdweb" }
 
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.60"
