--- a/yew-stdweb/examples/js_callback/Cargo.toml
+++ b/yew-stdweb/examples/js_callback/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 stdweb = "0.4.20"
-yew-stdweb = { path = "../.." }
+yew = { path = "../..", package = "yew-stdweb" }
 
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.60"
