--- a/yew-stdweb/examples/npm_and_rest/Cargo.toml
+++ b/yew-stdweb/examples/npm_and_rest/Cargo.toml
@@ -9,7 +9,7 @@ anyhow = "1"
 serde = "1"
 serde_derive = "1"
 stdweb = "0.4.20"
-yew-stdweb = { path = "../.." }
+yew = { path = "../..", package = "yew-stdweb" }
 
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.60"
