--- a/yew-stdweb/examples/todomvc/Cargo.toml
+++ b/yew-stdweb/examples/todomvc/Cargo.toml
@@ -9,7 +9,7 @@ strum = "0.13"
 strum_macros = "0.13"
 serde = "1"
 serde_derive = "1"
-yew-stdweb = { path = "../.." }
+yew = { path = "../..", package = "yew-stdweb" }
 
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
 wasm-bindgen = "0.2.60"
