--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -95,6 +95,7 @@ features = [
   "WebSocket",
   "WheelEvent",
   "Window",
+  "Performance",
   "Worker",
   "WorkerGlobalScope",
   "WorkerOptions",
@@ -131,6 +132,7 @@ agent = ["bincode"]
 yaml = ["serde_yaml"]
 msgpack = ["rmp-serde"]
 cbor = ["serde_cbor"]
+dev = ["wasm-bindgen"]
 
 [package.metadata.docs.rs]
 features = ["yaml", "cbor", "toml", "msgpack", "doc_test"]
