--- a/yewtil/examples/effect/Cargo.toml
+++ b/yewtil/examples/effect/Cargo.toml
@@ -4,10 +4,8 @@ version = "0.1.0"
 authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-yew = { git = "https://github.com/yewstack/yew", branch="master" }
-yewtil = {path="../..", features=["effect"]}
-web_logger = "0.2.0"
 log = "0.4.8"
+web_logger = "0.2.0"
+yew = { path = "../../../yew" }
+yewtil = { path = "../..", features = ["effect"] }
