--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
   "yewtil",
   "yewtil-macro",
   "yewtil/examples/pure_component",
-  "yewtil/examples/dsl",
+  # "yewtil/examples/dsl",
   "yewtil/examples/lrc",
   "yewtil/examples/history",
   "yewtil/examples/mrc_irc",
