--- a/yewtil/examples/function_component/Cargo.toml
+++ b/yewtil/examples/function_component/Cargo.toml
@@ -9,3 +9,6 @@ log = "0.4.8"
 web_logger = "0.2.0"
 yew = { path = "../../../yew" }
 yewtil = { path = "../.." }
+
+[target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
+wasm-bindgen = "0.2.51"
