--- a/examples/crm/Cargo.toml
+++ b/examples/crm/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 serde = "1"
 serde_derive = "1"
 yew = { path = "../../yew" }
-pulldown-cmark = "0.1.2"
+pulldown-cmark = { version = "0.7.0", default-features = false }
 
 [features]
 std_web = ["yew/std_web"]
