--- a/examples/dashboard/Cargo.toml
+++ b/examples/dashboard/Cargo.toml
@@ -13,3 +13,6 @@ yew = { path = "../../yew", features = ["toml"] }
 [features]
 std_web = ["yew/std_web"]
 web_sys = ["yew/web_sys"]
+
+[lib]
+crate-type = ["cdylib", "rlib"]
