--- a/examples/timer/Cargo.toml
+++ b/examples/timer/Cargo.toml
@@ -10,3 +10,6 @@ yew = { path = "../../yew" }
 [features]
 std_web = ["yew/std_web"]
 web_sys = ["yew/web_sys"]
+
+[lib]
+crate-type = ["cdylib", "rlib"]
