--- a/yew-stdweb/Cargo.toml
+++ b/yew-stdweb/Cargo.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 repository = "https://github.com/yewstack/yew"
 homepage = "https://github.com/yewstack/yew"
-documentation = "https://docs.rs/yew/"
+documentation = "https://docs.rs/yew-stdweb/"
 license = "MIT/Apache-2.0"
 readme = "README.md"
 keywords = ["web", "asmjs", "webasm", "javascript"]
