--- a/yew-components/Cargo.toml
+++ b/yew-components/Cargo.toml
@@ -9,7 +9,6 @@ repository = "https://github.com/yewstack/yew"
 homepage = "https://github.com/yewstack/yew"
 documentation = "https://docs.rs/yew-components/"
 license = "MIT/Apache-2.0"
-readme = "README.md"
 keywords = ["web", "asmjs", "webasm", "javascript"]
 categories = ["gui", "web-programming"]
 description = "A collection of community-created Yew components"
@@ -20,4 +19,4 @@ travis-ci = { repository = "yewstack/yew" }
 [dependencies]
 wasm-bindgen = "0.2.60"
 web-sys = "0.3"
-yew = { path = "../yew" }
+yew = { version = "0.15", path = "../yew" }
