--- a/yew-stdweb/Cargo.toml
+++ b/yew-stdweb/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yew-stdweb"
-version = "0.14.3"
+version = "0.15.0"
 edition = "2018"
 authors = [
     "Denis Kolodin <deniskolodin@gmail.com>",
@@ -10,7 +10,7 @@ repository = "https://github.com/yewstack/yew"
 homepage = "https://github.com/yewstack/yew"
 documentation = "https://docs.rs/yew-stdweb/"
 license = "MIT/Apache-2.0"
-readme = "README.md"
+readme = "../README.md"
 keywords = ["web", "asmjs", "webasm", "javascript"]
 categories = ["gui", "web-programming"]
 description = "A framework for making client-side single-page apps"
@@ -44,7 +44,7 @@ thiserror = "1"
 toml = { version = "0.5", optional = true }
 wasm-bindgen = { version = "0.2.60", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
-yew-macro = { version = "0.14.1", path = "../yew-macro" }
+yew-macro = { version = "0.15.0", path = "../yew-macro" }
 
 # Changes here must be reflected in `build.rs`
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
