--- a/yew-router/examples/router_component/Cargo.toml
+++ b/yew-router/examples/router_component/Cargo.toml
@@ -6,8 +6,8 @@ authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition="2018"
 
 [dependencies]
-yew = { path = "../../../yew" }
-yew-router = {path = "../.." }
+yew = { path = "../../../yew", features = ["std_web", "services"], default-features = false }
+yew-router = {path = "../..", features = ["std_web", "core", "unit_alias"], default-features = false }
 web_logger = "0.2"
 log = "0.4.8"
 wee_alloc = "0.4.5"
