--- a/yew-router-macro/Cargo.toml
+++ b/yew-router-macro/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yew-router-macro"
-version = "0.11.0"
+version = "0.12.0"
 authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition = "2018"
 license = "MIT/Apache-2.0"
@@ -13,7 +13,7 @@ proc-macro = true
 [dependencies]
 syn = "1.0.2"
 quote = "1.0.1"
-yew-router-route-parser = { path = "../yew-router-route-parser" }
+yew-router-route-parser = { version = "0.12.0", path = "../yew-router-route-parser"}
 proc-macro2 = "1.0.1"
 
 [dev-dependencies]
