--- a/yew-router/Cargo.toml
+++ b/yew-router/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yew-router"
-version = "0.11.0"
+version = "0.12.0"
 authors = ["Henry Zimmerman <zimhen7@gmail.com>", "Sascha Grunert <mail@saschagrunert.de>"]
 edition = "2018"
 license = "MIT/Apache-2.0"
@@ -31,6 +31,10 @@ web_sys = [
 ]
 
 [dependencies]
+yew = { version = "0.15.0", path = "../yew", features = ["services", "agent"], default-features= false, optional = true }
+yew-router-macro = { version = "0.12.0", path = "../yew-router-macro" }
+yew-router-route-parser = { version = "0.12.0", path = "../yew-router-route-parser" }
+
 cfg-if = "0.1.10"
 cfg-match = "0.2"
 gloo = { version = "0.2.0", optional = true }
@@ -41,9 +45,6 @@ serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
 stdweb = { version = "0.4.20", optional = true }
 wasm-bindgen = { version = "0.2.58", optional = true }
-yew = { path = "../yew", features = ["services", "agent"], optional = true }
-yew-router-macro = { path = "../yew-router-macro" }
-yew-router-route-parser = { path = "../yew-router-route-parser" }
 
 [dependencies.web-sys]
 version = "0.3"
