--- a/yew-router/examples/router_component/Cargo.toml
+++ b/yew-router/examples/router_component/Cargo.toml
@@ -5,9 +5,13 @@ authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 
 edition="2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
-yew = { path = "../../../yew" }
-yew-router = {path = "../.." }
+yew = { path = "../../../yew"}
+yew-router = {path = "../.."}
 web_logger = "0.2"
 log = "0.4.8"
 wee_alloc = "0.4.5"
+wasm-bindgen = "0.2.60"
