--- a/yew-router/examples/servers/warp/Cargo.toml
+++ b/yew-router/examples/servers/warp/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-warp = "0.1.20"
+warp = "0.2.2"
+tokio = {version = "0.2.19", features = ["macros"]}
