script for building examples
minimal example updated to work with wasm-pack
minimal_wb exampel to be used with wasm-bindgen directly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ members = [
   "examples/js_callback",
   "examples/large_table",
   "examples/minimal",
+  "examples/minimal_wb",
   "examples/mount_point",
   "examples/multi_thread",
   "examples/nested_list",
