minimal is wasm-bindgen as default ( wp wasm-pack )

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,9 +41,10 @@ members = [
   "examples/js_callback",
   "examples/large_table",
   "examples/minimal",
-  "examples/minimal_wb",
+  "examples/minimal_wp",
   "examples/mount_point",
   "examples/multi_thread",
+  "examples/multi_thread_wp",
   "examples/nested_list",
   "examples/node_refs",
   "examples/npm_and_rest",
