--- a/examples/minimal_wp/Cargo.toml
+++ b/examples/minimal_wp/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
-name = "minimal_wb"
+name = "minimal_wp"
 version = "0.1.0"
 authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 yew = { path = "../../yew" }
+wasm-bindgen = "0.2"
 
+[features]
+std_web = ["yew/std_web"]
+web_sys = ["yew/web_sys"]
+
+[lib]
+crate-type = ["cdylib", "rlib"]
