the fetch feature still needs web-sys
Not implicit via future anymore

--- a/yewtil/Cargo.toml
+++ b/yewtil/Cargo.toml
@@ -28,7 +28,7 @@ with_callback = []
 history = []
 dsl = []
 effect = []
-fetch = ["serde", "serde_json", "neq", "future"]
+fetch = ["serde", "serde_json", "neq", "future", "web-sys"]
 future = ["wasm-bindgen-futures", "wasm-bindgen", "futures"]
 
 # Ptr features
