one build.sh for examples, updated doc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ members = [
   "examples/dashboard",
   "examples/file_upload",
   "examples/fragments",
-  "examples/futures",
+  "examples/futures_wp",
   "examples/game_of_life",
   "examples/inner_html",
   "examples/js_callback",
