updated examples, added build script (#1165)
* script for building examples

minimal example updated to work with wasm-pack
minimal_wb exampel to be used with wasm-bindgen directly

* minimal is wasm-bindgen as default ( wp wasm-pack )

* examples updated to work with wasm-bindgen

* script to run all yew/examples

* upated example doc, added script to multi-thread

* cargo fmt, disabled build_examples.sh

* one build.sh for examples, updated doc

* removed build size optimalization

* wasm-pack requirement info in lib.rs

* Update examples/readme.md

* Update examples/readme.md

* Update examples/readme.md

* Update examples/readme.md

* Update examples/readme.md

* Update examples/readme.md

* Update examples/readme.md

* Update examples/readme.md

* Update examples/readme.md

* Update examples/readme.md

* Update examples/build.sh

Co-Authored-By: Justin Starry <justin.m.starry@gmail.com>

* Update examples/build.sh exit trap

Co-Authored-By: Justin Starry <justin.m.starry@gmail.com>

Co-authored-by: Justin Starry <justin.m.starry@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,12 +35,13 @@ members = [
   "examples/dashboard",
   "examples/file_upload",
   "examples/fragments",
-  "examples/futures",
+  "examples/futures_wp",
   "examples/game_of_life",
   "examples/inner_html",
   "examples/js_callback",
   "examples/large_table",
   "examples/minimal",
+  "examples/minimal_wp",
   "examples/mount_point",
   "examples/multi_thread",
   "examples/nested_list",
