--- a/examples/futures_wp/Cargo.toml
+++ b/examples/futures_wp/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "futures"
+name = "futures_wp"
 version = "0.1.0"
 authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition = "2018"
