--- a/examples/pub_sub/Cargo.toml
+++ b/examples/pub_sub/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
-web_logger = "0.2"
+wasm_logger = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 yew = { path = "../../yew" }
