--- a/yew-router/examples/router_component/Cargo.toml
+++ b/yew-router/examples/router_component/Cargo.toml
@@ -2,16 +2,15 @@
 name = "router_component"
 version = "0.1.0"
 authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
-
-edition="2018"
+edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-yew = { path = "../../../yew"}
-yew-router = {path = "../.."}
-web_logger = "0.2"
+yew = { path = "../../../yew" }
+yew-router = { path = "../.." }
+wasm_logger = "0.2.0"
 log = "0.4.8"
 wee_alloc = "0.4.5"
 wasm-bindgen = "0.2.60"
