--- a/yewtil/examples/effect/Cargo.toml
+++ b/yewtil/examples/effect/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 
 [dependencies]
 log = "0.4.8"
-web_logger = "0.2.0"
+wasm_logger = "0.2.0"
 yew = { path = "../../../yew" }
 yewtil = { path = "../..", features = ["effect"] }
