--- a/examples/game_of_life/Cargo.toml
+++ b/examples/game_of_life/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2018"
 [dependencies]
 rand = "0.7.3"
 log = "0.4"
-wasm_logger = "0.2.0"
+wasm-logger = "0.2.0"
 yew = { path = "../../yew" }
