--- a/yewtil/examples/dsl/Cargo.toml
+++ b/yewtil/examples/dsl/Cargo.toml
@@ -7,6 +7,6 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 log = "0.4.8"
-wasm_logger = "0.2.0"
+wasm-logger = "0.2.0"
 yew = { path = "../../../yew" }
 yewtil = { path = "../..", features = ["dsl"] }
