--- a/yewtil/examples/fetch/Cargo.toml
+++ b/yewtil/examples/fetch/Cargo.toml
@@ -11,6 +11,6 @@ crate-type = ["cdylib", "rlib"]
 log = "0.4.8"
 serde = "1.0.102"
 wasm-bindgen = "0.2.51"
-wasm_logger = "0.2.0"
+wasm-logger = "0.2.0"
 yew = { path = "../../../yew" }
 yewtil = { path = "../..", features = ["fetch"] }
