--- a/yew-router/examples/minimal/Cargo.toml
+++ b/yew-router/examples/minimal/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-yew = { path = "../../../yew"  }
+yew = { path = "../../../yew" }
 yew-router = { path = "../..", features = ["service", "web_sys"], default-features = false }
-web_logger = "0.2"
+wasm-logger = "0.2.0"
 log = "0.4.8"
 wee_alloc = "0.4.5"
 wasm-bindgen = "0.2.60"
