--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 doc-comment = "0.3.3"
+wasm-bindgen = "0.2"
 wasm-bindgen-test = "0.3.0"
 wee_alloc = "0.4"
 yew = { version = "0.15.0", features = ["wasm_test"] }
