Fix unresolved import error. (#5)

--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -69,6 +69,7 @@ features = [
   "FocusEvent",
   "Headers",
   "HtmlElement",
+  "HtmlButtonElement",
   "HtmlInputElement",
   "HtmlSelectElement",
   "HtmlTextAreaElement",
