add handlers for web_sys

--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -52,6 +52,7 @@ optional = true
 features = [
   "AbortController",
   "AbortSignal",
+  "AnimationEvent",
   "BinaryType",
   "Blob",
   "BlobPropertyBag",
@@ -61,6 +62,7 @@ features = [
   "DomTokenList",
   "DragEvent",
   "Element",
+  "ErrorEvent",
   "Event",
   "EventTarget",
   "File",
@@ -72,6 +74,7 @@ features = [
   "HtmlInputElement",
   "HtmlSelectElement",
   "HtmlTextAreaElement",
+  "InputEvent",
   "KeyboardEvent",
   "Location",
   "MessageEvent",
@@ -79,6 +82,7 @@ features = [
   "Node",
   "ObserverCallback",
   "PointerEvent",
+  "ProgressEvent",
   "ReferrerPolicy",
   "Request",
   "RequestCache",
@@ -90,6 +94,7 @@ features = [
   "Storage",
   "Text",
   "TouchEvent",
+  "TransitionEvent",
   "UiEvent",
   "Url",
   "WebSocket",
