--- a/yew-router-route-parser/Cargo.toml
+++ b/yew-router-route-parser/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition = "2018"
 license = "MIT/Apache-2.0"
 description = "The parser for the routing syntax used with yew-router"
-repository = "https://github.com/yewstack/yew_router"
+repository = "https://github.com/yewstack/yew"
 
 [dependencies]
 nom = "5.0.0"
