--- a/yewtil/Cargo.toml
+++ b/yewtil/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
 edition = "2018"
 description = "Utility crate for Yew"
 license = "MIT/Apache-2.0"
-repository = "https://github.com/yewstack/yewtil"
+repository = "https://github.com/yewstack/yew"
 readme = "Readme.md"
 
 [features]
