--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -19,6 +19,7 @@ description = "A framework for making client-side single-page apps"
 travis-ci = { repository = "yewstack/yew" }
 
 [dependencies]
+ahash = { version = "0.3", optional = true }
 anyhow = "1"
 anymap = "0.12"
 bincode = { version = "~1.2.1", optional = true }
@@ -127,6 +128,7 @@ bincode = "~1.2.1"
 
 [features]
 default = ["services", "agent", "web_sys"]
+fast_hasher = ["ahash"]
 std_web = ["stdweb", "yew-macro/std_web"]
 web_sys = ["console_error_panic_hook", "futures", "gloo", "js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]
 doc_test = []
