Handle [type] attribute on the Button element (#1033)
* initial

* handle button

* handle button

* remove std_web

* merge

* revert

* Fix unresolved import error. (#5)

* fix yew-stdweb

Co-authored-by: Teymour Aldridge <42674621+teymour-aldridge@users.noreply.github.com>
Co-authored-by: Justin Starry <justin.starry@icloud.com>

--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -71,6 +71,7 @@ features = [
   "FocusEvent",
   "Headers",
   "HtmlElement",
+  "HtmlButtonElement",
   "HtmlInputElement",
   "HtmlSelectElement",
   "HtmlTextAreaElement",
