fix writing entire cargo.toml on a single line

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -47,7 +47,8 @@ jobs:
             echo "ERROR: failed to configure Cargo.toml"
             exit 1
           fi
-          echo $output > frameworks/keyed/yew/Cargo.toml
+          echo "$output" > frameworks/keyed/yew/Cargo.toml
+          echo "$output"
 
       - name: Setup ChromeDriver
         uses: nanasess/setup-chromedriver@master
