--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Configure benchmark
         run: |
-          search="{ git = \"https://github.com/jstarry/yew\", branch = \"keyed-list\" }"
+          search="{ git = \"https://github.com/yewstack/yew\", branch = \"master\" }"
           replace="{ git = \"${{ github.event.pull_request.head.repo.html_url }}\", branch = \"${{ github.event.pull_request.head.ref }}\" }"
           input=$(cat frameworks/keyed/yew/Cargo.toml)
           output=${input//"$search"/"$replace"}
