--- a/examples/crm/Cargo.toml
+++ b/examples/crm/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 serde = "1"
 serde_derive = "1"
 yew = { path = "../../yew" }
-pulldown-cmark = { version = "0.7.0", default-features = false }
+common = { path = "../common" }
