--- a/yewtil/Cargo.toml
+++ b/yewtil/Cargo.toml
@@ -31,6 +31,7 @@ effect = []
 fetch = ["serde", "serde_json", "neq", "future", "web-sys"]
 future = ["wasm-bindgen-futures", "wasm-bindgen", "futures"]
 store = []
+sgml_tags = []
 
 # Ptr features
 lrc = []
@@ -38,6 +39,7 @@ mrc_irc = []
 
 [dependencies]
 futures = {version = "0.3.1", optional = true}
+lazy_static = "1.3.0"
 log = "0.4.8"
 serde = {version= "1.0.102", optional = true}
 serde_json = { version = "1.0.41", optional = true }
