--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -135,7 +135,7 @@ web_sys = ["console_error_panic_hook", "futures", "gloo", "js-sys", "web-sys", "
 doc_test = []
 wasm_test = []
 services = []
-ssr = ["htmlescape"]
+sans_mount_render = ["htmlescape"]
 agent = ["bincode"]
 yaml = ["serde_yaml"]
 msgpack = ["rmp-serde"]
