--- a/yew-stdweb/Cargo.toml
+++ b/yew-stdweb/Cargo.toml
@@ -45,6 +45,8 @@ toml = { version = "0.5", optional = true }
 wasm-bindgen = { version = "0.2.60", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
 yew-macro = { version = "0.16.1", path = "../yew-macro", features = ["std_web"] }
+htmlescape = { version = "0.3.1", optional = true }
+once_cell = "1.4.0"
 
 # Changes here must be reflected in `build.rs`
 [target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
