--- a/yew-stdweb/Cargo.toml
+++ b/yew-stdweb/Cargo.toml
@@ -30,6 +30,7 @@ gloo = { version = "0.2.1", optional = true }
 http = "0.2"
 indexmap = "1.0.2"
 js-sys = { version = "0.3", optional = true }
+lazy_static = "1.3.0"
 log = "0.4"
 proc-macro-hack = "0.5"
 proc-macro-nested = "0.1"
