--- a/yew/Cargo.toml
+++ b/yew/Cargo.toml
@@ -142,4 +142,4 @@ msgpack = ["rmp-serde"]
 cbor = ["serde_cbor"]
 
 [package.metadata.docs.rs]
-features = ["yaml", "cbor", "toml", "msgpack", "doc_test"]
+features = ["yaml", "cbor", "toml", "msgpack", "doc_test", "sans_mount_render"]
