--- a/yewtil/Cargo.toml
+++ b/yewtil/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "Utility crate for Yew"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/yewstack/yew"
-readme = "Readme.md"
+readme = "README.md"
 
 [features]
 default = ["stable"] # Only stable is included by default.
