--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "yew-components",
   "yew-functional",
   "yew-macro",
+  "yew-validation",
 
   # Router
   "yew-router",
@@ -16,7 +17,6 @@ members = [
   # Utilities
   "yewtil",
   "yewtil-macro",
-  "yewtil-validation",
   "yewtil/examples/pure_component",
   # "yewtil/examples/dsl",
   "yewtil/examples/lrc",
