--- a/yew-validation/Cargo.toml
+++ b/yew-validation/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "yewtil-validation"
+name = "yew-validation"
 version = "0.1.0"
 authors = ["Philip Peterson <pc.peterso@gmail.com>"]
 edition = "2018"
