--- a/yewtil/examples/shared_state/Cargo.toml
+++ b/yewtil/examples/shared_state/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yewtil = { path = "../../" }
+yewtil = { path = "../../", features = ["state"]}
 yew = { path = "../../../yew" }
+wasm-bindgen = "0.2.64"
