--- a/.github/workflows/autopublish.yml
+++ b/.github/workflows/autopublish.yml
@@ -24,4 +24,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./website/build
+          publish_dir: ./website/build/docs
