Update workflow to run on any markdown file or when the dictionary is changed.

--- a/.github/workflows/doctests.yml
+++ b/.github/workflows/doctests.yml
@@ -2,10 +2,12 @@ name: Documentation tests
 on:
   push:
     paths:
-      - "docs/**/*"
+      - "./**/*.md"
+      - "./ci/dictionary.txt"
   pull_request:
     paths:
-      - "docs/**/*"
+      - "./**/*.md"
+      - "./ci/dictionary.txt"
 
 jobs:
   check-spelling:
